@@ -6,6 +6,8 @@
 Version 1.3
 Released:
 
++Add ed_msg callback interface "CodeBrowser.ContextMenu".
++Use EdThreadPool for running parsing jobs.
 
 #-----------------------------------------------------------------------------#
 
